[gd_scene load_steps=10 format=3 uid="uid://6y5ct0eh1hxa"]

[ext_resource type="Script" path="res://gag_spawner/gag_spawner.gd" id="1_uhum8"]
[ext_resource type="PackedScene" uid="uid://d1gq02ye7v2nt" path="res://gags/banana_peel/banana_peel.tscn" id="2_lomfg"]
[ext_resource type="Resource" uid="uid://c7iao8su5adck" path="res://gags/banana_peel/banana_peel_resource.tres" id="2_soqy6"]
[ext_resource type="Resource" uid="uid://bqoace2wfmftp" path="res://gags/tnt/tnt_resource.tres" id="3_0dvfc"]
[ext_resource type="PackedScene" uid="uid://bb1awqoadapq5" path="res://gags/tnt/tnt.tscn" id="3_o1h5y"]
[ext_resource type="Resource" uid="uid://gkw7lik645ms" path="res://gags/boxing_glove/boxing_glove_resource.tres" id="4_7losi"]
[ext_resource type="PackedScene" uid="uid://bffe45tcnqfb3" path="res://gag_spawner/ui/gag_button.tscn" id="4_jjflg"]
[ext_resource type="PackedScene" uid="uid://ce6aavu131g7o" path="res://gags/boxing_glove/boxing_glove.tscn" id="7_6sk75"]
[ext_resource type="Texture2D" uid="uid://duu5s1krrgund" path="res://gags/empty_texture.tres" id="9_kc4vt"]

[node name="GagSpawner" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -960.0
offset_bottom = -512.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_uhum8")
activeGagResources = Array[Resource("res://gags/gag_resource.gd")]([ExtResource("2_soqy6"), ExtResource("3_0dvfc"), ExtResource("4_7losi")])
gags = {
"BANANA_PEEL": ExtResource("2_lomfg"),
"BOXING_GLOVE": ExtResource("7_6sk75"),
"TNT": ExtResource("3_o1h5y")
}
gagButton = ExtResource("4_jjflg")

[node name="GagButtonContainer" type="HBoxContainer" parent="."]
layout_mode = 0
offset_left = 8.0
offset_top = 448.0
offset_right = 920.0
offset_bottom = 512.0

[node name="GagHolder" type="Node" parent="."]

[node name="Preview" type="Sprite2D" parent="."]
scale = Vector2(2, 2)
texture = ExtResource("9_kc4vt")
